--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'maven'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.bertramlabs.plugins'
-version = '2.2.5.SNAPSHOT'
+version = '2.2.5'
 
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
