--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,14 @@ plugins {
     id "com.jfrog.bintray" version "1.2"
 }
 
-apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 apply plugin: 'maven'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.bertramlabs.plugins'
 version = '2.3.8'
-
-ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
-
 
 repositories {
     jcenter()
@@ -36,13 +34,25 @@ sourceSets {
     }
 }
 
+ext {
+  isReleaseVersion = !version.endsWith("SNAPSHOT")
+  slf4jVersion = "1.7.10"
+  ratpackVersion = "0.9.18"
+  spockVersion = "1.0-groovy-2.4"
+  cglibVersion = "2.2.2"
+  objenesisVersion = "2.1"
+  groovyVersion = "2.4.3"
+}
+
 dependencies {
-  runtime "org.slf4j:slf4j-simple:1.7.10"
   compile "com.bertramlabs.plugins:asset-pipeline-core:${version}"
-  compile "org.codehaus.groovy:groovy-all:2.4.3"
-  ['ratpack-core','ratpack-guice'].each {
-    compile "io.ratpack:${it}:0.9.17"
-  }
+  compile "io.ratpack:ratpack-guice:${ratpackVersion}"
+  compile "org.codehaus.groovy:groovy-all:${groovyVersion}"
+  runtime "org.slf4j:slf4j-simple:${slf4jVersion}"
+  testCompile "org.spockframework:spock-core:${spockVersion}"
+  testCompile "cglib:cglib:${cglibVersion}"
+  testCompile "org.objenesis:objenesis:${objenesisVersion}"
+  testCompile "io.ratpack:ratpack-test:${ratpackVersion}"
 }
 
 publishing {
@@ -122,8 +132,6 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
 }
 
-
-
 test {
     testLogging {
         exceptionFormat = 'full'
@@ -131,3 +139,38 @@ test {
     }
 }
 
+idea {
+  project {
+    jdkName "1.8"
+    languageLevel "1.8"
+    ipr {
+      withXml { provider ->
+        def node = provider.asNode()
+        node.component.find { it.'@name' == 'VcsDirectoryMappings' }?.mapping[0].'@vcs' = 'Git'
+
+        def copyrightManager = node.component.find { it.'@name' == 'CopyrightManager' }
+        copyrightManager.@default = "ASL2"
+        def aslCopyright = copyrightManager.copyright.find { it.option.find { it.@name == "myName" }?.@value == "ASL2" }
+        if (aslCopyright == null) {
+          copyrightManager.append(new XmlParser().parseText("""
+            <copyright>
+              <option name="notice" value="Copyright \$today.year the original author or authors.&#10;&#10;Licensed under the Apache License, Version 2.0 (the &quot;License&quot;);&#10;you may not use this file except in compliance with the License.&#10;You may obtain a copy of the License at&#10;&#10;   http://www.apache.org/licenses/LICENSE-2.0&#10;&#10;Unless required by applicable law or agreed to in writing, software&#10;distributed under the License is distributed on an &quot;AS IS&quot; BASIS,&#10;WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.&#10;See the License for the specific language governing permissions and&#10;limitations under the License." />
+              <option name="keyword" value="Copyright" />
+              <option name="allowReplaceKeyword" value="" />
+              <option name="myName" value="ASL2" />
+              <option name="myLocal" value="true" />
+            </copyright>
+          """))
+        }
+
+        def module2copyright = copyrightManager.module2copyright.first()
+        def productionCodeModule = module2copyright.find { it.element.find { it.@module == "Production" }?.@value == "ASL2" }
+        if (productionCodeModule == null) {
+          module2copyright.append(new XmlParser().parseText("""
+              <element module="Production" copyright="ASL2" />
+          """))
+        }
+      }
+    }
+  }
+}
