--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'maven'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.bertramlabs.plugins'
-version = '2.3.8'
+version = '2.3.9'
 
 repositories {
     jcenter()
@@ -45,7 +45,7 @@ ext {
 }
 
 dependencies {
-  compile "com.bertramlabs.plugins:asset-pipeline-core:${version}"
+  compile "com.bertramlabs.plugins:asset-pipeline-core:2.3.8"
   compile "io.ratpack:ratpack-guice:${ratpackVersion}"
   compile "org.codehaus.groovy:groovy-all:${groovyVersion}"
   runtime "org.slf4j:slf4j-simple:${slf4jVersion}"
