--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
     jcenter()
     mavenCentral()
     mavenLocal()
+    maven { url "http://oss.jfrog.org/artifactory/repo" }
 }
 
 configurations {
@@ -37,7 +38,7 @@ sourceSets {
 ext {
   isReleaseVersion = !version.endsWith("SNAPSHOT")
   slf4jVersion = "1.7.10"
-  ratpackVersion = "0.9.18"
+  ratpackVersion = "0.9.+"
   spockVersion = "1.0-groovy-2.4"
   cglibVersion = "2.2.2"
   objenesisVersion = "2.1"
