--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'maven'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.bertramlabs.plugins'
-version = '2.3.10'
+version = '2.3.11'
 
 repositories {
     jcenter()
@@ -38,7 +38,7 @@ sourceSets {
 ext {
   isReleaseVersion = !version.endsWith("SNAPSHOT")
   slf4jVersion = "1.7.10"
-  ratpackVersion = "0.9.+"
+  ratpackVersion = "0.9.18"
   spockVersion = "1.0-groovy-2.4"
   cglibVersion = "2.2.2"
   objenesisVersion = "2.1"
